src/snapshots/openapi_generator__test_helpers__allof_wrapper_in_oneof.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum ContentBlock {
    #[serde(rename = "text")]
    TextBlock(TextBlock),
    #[serde(rename = "image")]
    ImageBlock(ImageBlock),
    #[serde(rename = "document")]
    DocumentBlock(DocumentBlock),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TextBlock {
    pub text: String,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum TextBlockType {
    #[default]
    #[serde(rename = "text")]
    Text,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ImageBlock {
    pub url: String,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ImageBlockType {
    #[default]
    #[serde(rename = "image")]
    Image,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct DocumentBlock {
    pub content: String,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum DocumentBlockType {
    #[default]
    #[serde(rename = "document")]
    Document,
}
