src/snapshots/openapi_generator__test_helpers__array_union_items.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ToolsRequest {
    pub tools: Vec<ToolsRequestToolsItemUnion>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum ToolsRequestToolsItemUnion {
    #[serde(rename = "text")]
    TextTool(TextTool),
    #[serde(rename = "code")]
    CodeTool(CodeTool),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TextTool {
    pub name: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CodeTool {
    pub language: String,
}
