src/snapshots/openapi_generator__test_helpers__beta_tools_array_union_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaCreateMessageParams {
    pub messages: Vec<Message>,
    pub model: String,
    ///Beta tools available to the model
    #[serde(skip_serializing_if = "Option::is_none")]
    pub tools: Option<Vec<BetaCreateMessageParamsToolsItemUnion>>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub content: String,
    pub role: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum BetaCreateMessageParamsToolsItemUnion {
    BetaTool(BetaTool),
    BetaComputerUseTool(BetaComputerUseTool),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaTool {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub description: Option<String>,
    pub input_schema: BetaInputSchema,
    pub name: String,
    #[serde(rename = "type", skip_serializing_if = "Option::is_none")]
    pub type_: Option<serde_json::Value>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaInputSchema {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub properties: Option<serde_json::Value>,
    #[serde(rename = "type", skip_serializing_if = "Option::is_none")]
    pub type_: Option<String>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaComputerUseTool {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub display_height_px: Option<i64>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub display_width_px: Option<i64>,
    pub name: String,
    #[serde(rename = "type", skip_serializing_if = "Option::is_none")]
    pub type_: Option<serde_json::Value>,
}
