src/snapshots/openapi_generator__test_helpers__complex_nested.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BetaListResponseMessageBatch {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub data: Option<Vec<MessageBatch>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub last_id: Option<BetaListResponseMessageBatchLastId>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct MessageBatch {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub status: Option<MessageBatchStatus>,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum MessageBatchStatus {
    #[default]
    #[serde(rename = "pending")]
    Pending,
    #[serde(rename = "completed")]
    Completed,
    #[serde(rename = "failed")]
    Failed,
}
pub type BetaListResponseMessageBatchLastId = String;
