src/snapshots/openapi_generator__test_helpers__complex_usage_test.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub id: String,
    ///Billing and rate-limit usage
    pub usage: Usage,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Usage {
    ///Optional cache tokens
    #[serde(skip_serializing_if = "Option::is_none")]
    pub cache_creation_input_tokens: Option<i64>,
    ///Optional cache read tokens
    #[serde(skip_serializing_if = "Option::is_none")]
    pub cache_read_input_tokens: Option<i64>,
    pub input_tokens: i64,
    pub output_tokens: i64,
}
