src/snapshots/openapi_generator__test_helpers__const_and_enum.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct AssistantMessage {
    pub content: String,
    ///Always 'assistant' for this message type
    pub role: AssistantMessageRole,
}
///Always 'assistant' for this message type
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum AssistantMessageRole {
    #[default]
    #[serde(rename = "assistant")]
    Assistant,
}
